src/assets/css/styles.css
body {
    font-family: 'Raleway', sans-serif;
    margin: 0;
    padding: 0;
    color: white;
    background-color: #2f254b;
}

a, button {
    color: white;
    text-decoration: none;
    background: none;
    border: 0;
    font-size: 17px;
    font-family: 'Raleway', sans-serif;
    cursor: pointer;
}

button:hover {
    color: #CC326A;
}

.wrapper {
    background-image: url('/src/assets/image/backdrop.jpg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: auto;
    min-height: 100vh;
    padding-bottom: 50px;
}

.wrapper2 {
    background-image: url('/src/assets/image/backdrop-blur.jpg');
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    height: auto;
    min-height: 100vh;
    padding-bottom: 50px;
}

.container {
    max-width: 1300px;
    margin-left: auto;
    margin-right: auto;
    padding: 0 20px 0 20px
}

nav .container {
    display: flex;
    height: 100px;
    justify-content: space-between;
    align-items: center;
    /* height: 50px; */
}

.brand {
    align-self: center;
}

.brand h1 {
    margin: 0;
    padding: 0 0 0 5px;
    height: 50px;
    border-bottom: 4px solid #CC326A;

}

nav h1 {
    font-size: 35px;
    letter-spacing: 8px;
}

.menu ul {
    display: flex;
    list-style: none;
}

.menu ul li {
    margin: 0 30px 0 0;
    z-index: 100;
    position: relative;
}

.menu ul li:last-child {
    margin: 0;
}

.menu-selected {
    display: none;
    position: absolute;
    top: -10px;
    left: -10px;
    z-index: -1;
    width: 55px;
    height: 40px;
    background-color: #CC326A;
}

.menu-selected-visible {
    display: block;
    position: absolute;
    top: -10px;
    left: -10px;
    z-index: -1;
    width: 55px;
    height: 40px;
    background-color: #CC326A;
}

.menu ul li button:hover {
    color: white;
}

.menu ul li button:hover+.menu-selected {
    display: block;
}

main {
    margin-top: auto;
    margin-bottom: auto;
}

.main-left {
    align-self: center;
    flex: 1 50%;
}

.main-left h2 {
    font-size: 134px;
    line-height: 122px;
    margin: 0;
    font-weight: 800;
}

.main-right {
    align-self: center;
    flex: 2 10%;
    padding-top: 80px;
}

.main-left h2 .highlight {
    color: #CC326A;
}

.main-left p {
    margin: 0 0 40px 0;
}

.main-left a .link {
    font-size: 45px;
    letter-spacing: 5px;
    font-weight: 300;
}

.link {
    display: flex;
}

.main-left a .link:hover {
    font-size: 45px;
    letter-spacing: 5px;
    font-weight: 300;
    color: #CC326A;
}

.icons {
    list-style: none;
    display: flex;
    margin: 20px 0 0 0;
    padding: 0;
}

.icons ul {
    list-style: none;
    display: flex;
    justify-content: space-between;
    width: 300px;
    margin: 20px 0 0 0;
    padding: 0;
}

.icons a li {
    display: flex;
    align-items: center;
    /* margin-right: 100px; */
    padding-right: 10px;
}

.icons img {
    width: 25px;
    margin-right: 10px;
}

.link img {
    margin-bottom: -5px;
    margin-left: 10px;
    object-fit: contain;
    width: 50px;
}

.link p {
    margin: 0px
}

.flex {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
    justify-content: space-between;
    height: 70vh;
}

.main-box {
    background-color: rgba(0, 0, 0, 0.29);
    padding: 20px;
    margin-bottom: 20px
}

.main-box h3 {
    font-size: 40px;
    margin: 0;
    padding: 0;
    font-weight: 300;
}

.row {
    width: 100%;
}

.row h2 {
    font-size: 180px;
    color: white;
    font-weight: 800;
    text-align: center;
    line-height: 150px;
    margin: 120px 0 40px 0;
}

.row p.desc {
    text-align: center;
    font-size: 18px;
    margin-bottom: 80px;
}

.row span {
    color: #CC326A;
    text-shadow: rgba(204, 50, 106, 0.5) 0px 0px 32px;
}

.work-item {
    display: flex;
    width: 100%;
    height: 350px;
    margin-bottom: 30px;
    background-color: rgba(0, 0, 0, 0.29);
    overflow: hidden;
}

.work-item img {
    width: 100%;
    object-fit: cover;
}

.work-image {
    flex: 50%;
}

.work-item-details {
    display: flex;
    flex-flow: column nowrap;
    flex: 50%;
    padding: 30px
}

.work-item-details p.label {
    margin: 0;
    text-transform: uppercase;
    letter-spacing: 3px;
    margin-bottom: 10px;
}

.work-item-details h3 {
    margin: 0;
    font-weight: 300;
    font-size: 30px;
}

a.projectbutton {
    margin-top: auto;
}

.resume-highlights {
    display: flex;
}

@media screen and (max-width: 768px) {
    .work-item {
        display: block;
        height: auto;
    }
}

@media screen and (max-width: 450px) {
    .main-left h2 {
        font-size: 70px;
        line-height: 70px;
    }

    .main-left a .link {
        font-size: 20px;
        letter-spacing: 3px;
    }

    .row h2 {
        font-size: 100px;
        color: white;
        font-weight: 800;
        text-align: center;
        line-height: 85px;
        margin: 50px 0 40px 0;
    }

    nav .container {
        display: block;
        height: 100px;
        margin: 0;
    }

    .menu ul {
        display: flex;
        justify-content: space-around;
        list-style: none;
        margin: 0;
        padding: 0;
    }

    .menu ul li {
        width: auto;
        padding: 0;
        margin: 0;
    }

    nav {
        padding-top: 20px;
        margin-bottom: 40px;
    }

    .brand h1 {
        margin: 0 0 20px 0;
    }

    .menu-selected {
        display: none;
        position: absolute;
        top: -10px;
        left: -10px;
        z-index: -1;
        width: 55px;
        height: 40px;
        background-color: #CC326A;
    }
    
    .menu-selected-visible {
        display: block;
        position: absolute;
        top: 0px;
        left: 0px;
        z-index: -1;
        width: 20px;
        height: 20px;
        background-color: #CC326A;
    }

    .icons ul {
        display: block;
    }

    .icons a li {
        margin: 0 0 20px 0;
    }
}

